@@ -23,8 +23,16 @@ class UserMailer < ActionMailer::Base
     setup_email
     @project_user = project_user
     mail(to: project_user.user.email,
-         subject: "#{project_user.project.user.name} Allows You to #{project_user.allow_editing? ? 'Edit' : 'View'} #{project_user.project.name}",
-         reply_to: project_user.project.user.email)
+         subject: "#{project_user.creator.name} Allows You to #{project_user.allow_editing? ? 'Edit' : 'View'} #{project_user.project.name}",
+         reply_to: project_user.creator.email)
+  end
+
+  def invite_user_to_project(project_user)
+    setup_email
+    @project_user = project_user
+    mail(to: project_user.invite_email,
+         subject: "#{project_user.creator.name} Invites You to #{project_user.allow_editing? ? 'Edit' : 'View'} #{project_user.project.name}",
+         reply_to: project_user.creator.email)
   end
 
   def comment_by_mail(comment, sticky, recipient)
