@@ -2,21 +2,26 @@
   <% if current_user.all_projects.include?(@project) %>
     <%= form_tag project_users_path(project_user: { project_id: @project.id, allow_editing: @relation == 'editors' }), method: :post, remote: true, style: 'display:inline', class: 'form-search' do %>
       <b><%= @relation.humanize %><br /></b>
-      <%= text_field_tag "#{@relation}_text", '', style: "width:300px;" %>
-      <%= submit_tag 'Add', class: 'btn btn-primary' %>
+      <%= text_field_tag "#{@relation}_text", '', style: "width:300px;", data: { provide: "typeahead", items: 5, source: current_user.associated_users.collect{|user| "#{user.name} [#{user.email}]" }.to_json } %>
+      <%= submit_tag 'Invite By Email', class: 'btn btn-primary' %>
     <% end %>
-    <%= javascript_tag "$(function(){$(\"##{@relation}_text\").autocomplete({source:[#{User.current.human.collect{|user| "'#{user.name} <#{user.email}>'"}.join(', ')}]});});" %>
   <% else %>
       <b><%= @relation.humanize %></b>
   <% end %>
 </span>
 <ul>
-<% @project.send(@relation).each do |user| %>
-  <% project_user = @project.project_users.find_by_user_id(user.id) %>
+
+
+
+<% @project.project_users.where(allow_editing: @relation == 'editors').each do |project_user| %>
   <li onmouseover="$('#project_user_<%= project_user.id %>_delete').show();" onmouseout="$('#project_user_<%= project_user.id %>_delete').hide();" style="line-height:25px">
-    <%= link_to user.name, user %>
+    <% if project_user.user %>
+      <%= link_to project_user.user.name, project_user.user %>
+    <% else %>
+      <span class='muted'><%= project_user.invite_email %></span>
+    <% end %>
     <span id="project_user_<%= project_user.id %>_delete" style="display:none">
-      <%= link_to 'Remove', project_user, method: :delete, remote: true, class: 'btn btn-mini btn-danger', data: { confirm: "Are you sure you want to remove #{user.name} from the list of #{@relation}?" } if current_user.all_projects.include?(@project) or (current_user.all_viewable_projects.include?(@project) and current_user == project_user.user) %>
+      <%= link_to 'Remove', project_user, method: :delete, remote: true, class: 'btn btn-mini btn-danger', data: { confirm: "Are you sure you want to remove #{project_user.user ? project_user.user.name : project_user.invite_email} from the list of #{@relation}?" } if current_user.all_projects.include?(@project) or (current_user.all_viewable_projects.include?(@project) and current_user == project_user.user) %>
     </span>
   </li>
 <% end %>
