@@ -6,6 +6,7 @@
   * Stickies can now be reassigned to another user in bulk from the project page
   * Dragging grouped stickies on the calendar now prompts whether to move the invidual sticky, all incomplete stickies in the group, or all the stickies in the group
   * Daily digest emails are now available for users who prefer a digest of the previous day included stickies added, completed, and comments made
+  * Users can now be added by email to projects without requiring the user to be signed up
 
 == 0.22.6
 
